# cuda

./: testingUnixGit.txt
KernelBenchmark/: CMakeLists.txt  d_HG.cu  d_MM.cu  d_VA.cu  h_HG.cpp  h_HG.cu  h_MM.cu  kernelBenchmark.cu  main.cu  verificator.cu
KernelBenchmark/nbproject/: configurations.xml  project.xml
KernelBenchmark/nbproject/private/: configurations.xml  downloads-129.10.53.105-workshop-22  private.xml  timestamps-kepler1.ece.neu.edu-roberts-22
histogram/: CMakeLists.txt  Histogram.cu  MatrixMult.cu  Netbeans_config_log  Personal Log.txt
histogram/nbproject/: configurations.xml  project.xml
histogram/nbproject/private/: Great_Test.properties  configurations.xml  downloads-129.10.53.105-workshop-22  private.xml  timestamps-129.10.53.105-workshop-22
matrixmult/: CMakeLists.txt  MatrixMult.cu  hostBenchmark.cu  hostKernels.cu  kernelBenchmark.cu  kernels.cu  main.cu  utils.cu  verificator.cu
matrixmult/nbproject/: configurations.xml  project.xml
matrixmult/nbproject/private/: Default.properties  Great_Test.properties  configurations.xml  private.xml  timestamps-129.10.53.105-workshop-22  timestamps-kepler1.ece.neu.edu-roberts-22
matrixmult_Kepler/: MatrixMult.cu
matrixmult_Kepler/nbproject/: configurations.xml  project.xml
matrixmult_Kepler/nbproject/private/: Great_Test.properties  configurations.xml  (+2 more)
nbproject/: configurations.xml  project.xml
nbproject/private/: timestamps-129.10.53.105-workshop-22
vectoradd/: CMakeLists.txt  Makefile  VectorAdd.cu  Workshop_location.txt
vectoradd/nbproject/: configurations.xml  project.xml
(+3 files in other folders)
